{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 989,
  "lineage": "35acfc03-55b9-0d07-edae-e28d3131aaf1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "newyork_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:864899853524:transit-gateway/tgw-0c9335396e8e102c9",
            "association_default_route_table_id": "tgw-rtb-0955f86fbb1fd9543",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway in New York (Spoke)",
            "dns_support": "enable",
            "id": "tgw-0c9335396e8e102c9",
            "multicast_support": "disable",
            "owner_id": "864899853524",
            "propagation_default_route_table_id": "tgw-rtb-0955f86fbb1fd9543",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "newyork-tgw"
            },
            "tags_all": {
              "Name": "newyork-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tokyo_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:transit-gateway/tgw-0571a9293e8c31446",
            "association_default_route_table_id": "tgw-rtb-05e7d22a922d19e1e",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway in Tokyo (Hub)",
            "dns_support": "enable",
            "id": "tgw-0571a9293e8c31446",
            "multicast_support": "disable",
            "owner_id": "864899853524",
            "propagation_default_route_table_id": "tgw-rtb-05e7d22a922d19e1e",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "tokyo-tgw"
            },
            "tags_all": {
              "Name": "tokyo-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment",
      "name": "newyork_to_tokyo_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-0142617369bac41f7",
            "peer_account_id": "864899853524",
            "peer_region": "ap-northeast-1",
            "peer_transit_gateway_id": "tgw-0571a9293e8c31446",
            "state": "pendingAcceptance",
            "tags": {
              "Name": "newyork-to-tokyo-peering"
            },
            "tags_all": {
              "Name": "newyork-to-tokyo-peering"
            },
            "transit_gateway_id": "tgw-0c9335396e8e102c9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment_accepter",
      "name": "tokyo_accepts_newyork_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-0142617369bac41f7",
            "peer_account_id": "864899853524",
            "peer_region": "us-east-1",
            "peer_transit_gateway_id": "tgw-0c9335396e8e102c9",
            "tags": {
              "Name": "tokyo-accepts-newyork"
            },
            "tags_all": {
              "Name": "tokyo-accepts-newyork"
            },
            "transit_gateway_attachment_id": "tgw-attach-0142617369bac41f7",
            "transit_gateway_id": "tgw-0571a9293e8c31446"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_peering_attachment.newyork_to_tokyo_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "newyork_to_tokyo_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.18.0.0/16",
            "id": "tgw-rtb-06d7b506f9027ab0b_172.18.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0142617369bac41f7",
            "transit_gateway_route_table_id": "tgw-rtb-06d7b506f9027ab0b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_peering_attachment.newyork_to_tokyo_peering",
            "aws_ec2_transit_gateway_peering_attachment_accepter.tokyo_accepts_newyork_peering",
            "aws_ec2_transit_gateway_route_table.newyork_tgw_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tokyo_to_newyork_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.19.0.0/16",
            "id": "tgw-rtb-00499ca0610ebfa67_172.19.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0142617369bac41f7",
            "transit_gateway_route_table_id": "tgw-rtb-00499ca0610ebfa67"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_peering_attachment.newyork_to_tokyo_peering",
            "aws_ec2_transit_gateway_peering_attachment_accepter.tokyo_accepts_newyork_peering",
            "aws_ec2_transit_gateway_route_table.tokyo_tgw_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "newyork_tgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864899853524:transit-gateway-route-table/tgw-rtb-06d7b506f9027ab0b",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-06d7b506f9027ab0b",
            "tags": {
              "Name": "newyork-tgw-rt"
            },
            "tags_all": {
              "Name": "newyork-tgw-rt"
            },
            "transit_gateway_id": "tgw-0c9335396e8e102c9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tokyo_tgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:transit-gateway-route-table/tgw-rtb-00499ca0610ebfa67",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-00499ca0610ebfa67",
            "tags": {
              "Name": "tokyo-tgw-rt"
            },
            "tags_all": {
              "Name": "tokyo-tgw-rt"
            },
            "transit_gateway_id": "tgw-0571a9293e8c31446"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "newyork_tgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-06d7b506f9027ab0b_tgw-attach-040f3a4b63298d85a",
            "replace_existing_association": false,
            "resource_id": "vpc-00c8befd9fc980836",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-040f3a4b63298d85a",
            "transit_gateway_route_table_id": "tgw-rtb-06d7b506f9027ab0b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_ec2_transit_gateway_route_table.newyork_tgw_rt",
            "aws_ec2_transit_gateway_vpc_attachment.newyork_tgw_attachment",
            "aws_subnet.newyork-private-subnet-1a",
            "aws_subnet.newyork-private-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tokyo_tgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-00499ca0610ebfa67_tgw-attach-08ff4b8ebdca35bd0",
            "replace_existing_association": false,
            "resource_id": "vpc-0a0e8a6e51d409e5c",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-08ff4b8ebdca35bd0",
            "transit_gateway_route_table_id": "tgw-rtb-00499ca0610ebfa67"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_ec2_transit_gateway_route_table.tokyo_tgw_rt",
            "aws_ec2_transit_gateway_vpc_attachment.tokyo_tgw_attachment",
            "aws_subnet.tokyo-private-subnet-1a",
            "aws_subnet.tokyo-private-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "newyork_tgw_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-040f3a4b63298d85a",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0074a92e52b6871ca",
              "subnet-0d700a10e7cc4f3a0"
            ],
            "tags": {
              "Name": "newyork-tgw-attachment"
            },
            "tags_all": {
              "Name": "newyork-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0c9335396e8e102c9",
            "vpc_id": "vpc-00c8befd9fc980836",
            "vpc_owner_id": "864899853524"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_subnet.newyork-private-subnet-1a",
            "aws_subnet.newyork-private-subnet-1b",
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tokyo_tgw_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-08ff4b8ebdca35bd0",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-046350926b1c5c8dd",
              "subnet-05a6280a7f6d74313"
            ],
            "tags": {
              "Name": "tokyo-tgw-attachment"
            },
            "tags_all": {
              "Name": "tokyo-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0571a9293e8c31446",
            "vpc_id": "vpc-0a0e8a6e51d409e5c",
            "vpc_owner_id": "864899853524"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tokyo_tgw",
            "aws_subnet.tokyo-private-subnet-1a",
            "aws_subnet.tokyo-private-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "australia-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077572dec82a71ffc",
            "arn": "arn:aws:ec2:ap-southeast-2:864899853524:elastic-ip/eipalloc-077572dec82a71ffc",
            "domain": "vpc",
            "id": "eipalloc-077572dec82a71ffc",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-211-32-28.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.211.32.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "australia-nat"
            },
            "tags_all": {
              "Name": "australia-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "california-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ee681fba05860fc",
            "arn": "arn:aws:ec2:us-west-1:864899853524:elastic-ip/eipalloc-06ee681fba05860fc",
            "domain": "vpc",
            "id": "eipalloc-06ee681fba05860fc",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-153-119-117.us-west-1.compute.amazonaws.com",
            "public_ip": "54.153.119.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "california-nat"
            },
            "tags_all": {
              "Name": "california-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hongkong-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f7606cc118f2a36",
            "arn": "arn:aws:ec2:ap-east-1:864899853524:elastic-ip/eipalloc-00f7606cc118f2a36",
            "domain": "vpc",
            "id": "eipalloc-00f7606cc118f2a36",
            "network_border_group": "ap-east-1",
            "public_dns": "ec2-16-163-175-96.ap-east-1.compute.amazonaws.com",
            "public_ip": "16.163.175.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hongkong-nat"
            },
            "tags_all": {
              "Name": "hongkong-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "london-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08be61aa4b43fcf6a",
            "arn": "arn:aws:ec2:eu-west-2:864899853524:elastic-ip/eipalloc-08be61aa4b43fcf6a",
            "domain": "vpc",
            "id": "eipalloc-08be61aa4b43fcf6a",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-169-249-244.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.169.249.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "london-nat"
            },
            "tags_all": {
              "Name": "london-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "newyork-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0578194fb6b2862c2",
            "arn": "arn:aws:ec2:us-east-1:864899853524:elastic-ip/eipalloc-0578194fb6b2862c2",
            "domain": "vpc",
            "id": "eipalloc-0578194fb6b2862c2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-44-50-69.compute-1.amazonaws.com",
            "public_ip": "52.44.50.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "newyork-nat"
            },
            "tags_all": {
              "Name": "newyork-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "saopaulo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048abbf265caf7d83",
            "arn": "arn:aws:ec2:sa-east-1:864899853524:elastic-ip/eipalloc-048abbf265caf7d83",
            "domain": "vpc",
            "id": "eipalloc-048abbf265caf7d83",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-54-207-215-88.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.207.215.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "saopaulo-nat"
            },
            "tags_all": {
              "Name": "saopaulo-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tokyo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05062e4bedc8bf507",
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:elastic-ip/eipalloc-05062e4bedc8bf507",
            "domain": "vpc",
            "id": "eipalloc-05062e4bedc8bf507",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-177-224-44.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.177.224.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyo-nat"
            },
            "tags_all": {
              "Name": "tokyo-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tokyotest-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-021c124a59f939cba",
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:elastic-ip/eipalloc-021c124a59f939cba",
            "domain": "vpc",
            "id": "eipalloc-021c124a59f939cba",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-13-231-94-251.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.231.94.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyotest-nat"
            },
            "tags_all": {
              "Name": "tokyotest-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "australia-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899853524:internet-gateway/igw-0686cbe9c2459dcea",
            "id": "igw-0686cbe9c2459dcea",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-Australia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-07e0ee860ea75eb6f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "california-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:864899853524:internet-gateway/igw-0a743cee9eefa4c05",
            "id": "igw-0a743cee9eefa4c05",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-Califonia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-071d7efa8dce2ef00"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hongkong-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:864899853524:internet-gateway/igw-0ebae70028338f675",
            "id": "igw-0ebae70028338f675",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-Hongkong-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-053d0428b4a3f2a60"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "london-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:864899853524:internet-gateway/igw-00a0e0e2b103e33bb",
            "id": "igw-00a0e0e2b103e33bb",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-London-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ffc5cd7bc165c115"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "newyork-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864899853524:internet-gateway/igw-041a1c2db6a0ad02b",
            "id": "igw-041a1c2db6a0ad02b",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-New York-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-00c8befd9fc980836"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "saopaulo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:864899853524:internet-gateway/igw-0b7e5d13327bd6e72",
            "id": "igw-0b7e5d13327bd6e72",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-Saup-Paulo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fd0255b69bcef259"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:internet-gateway/igw-0551245b36616246f",
            "id": "igw-0551245b36616246f",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-Tokyo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0a0e8a6e51d409e5c"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyotest-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:internet-gateway/igw-016074ce5c6ce50ad",
            "id": "igw-016074ce5c6ce50ad",
            "owner_id": "864899853524",
            "tags": {
              "Name": "TokyoTest_IG",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoTest_IG",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-04ad607f3e937193f"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "australia_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:864899853524:loadbalancer/app/australia-load-balancer/6110116a72fe0f06",
            "arn_suffix": "app/australia-load-balancer/6110116a72fe0f06",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "australia-load-balancer-609471015.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:864899853524:loadbalancer/app/australia-load-balancer/6110116a72fe0f06",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "australia-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a790ba03262f4611"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03e8dc7ac8b87d564"
              },
              {
                "subnet_id": "subnet-0dd4f6e0cf9bc26e9"
              }
            ],
            "subnets": [
              "subnet-03e8dc7ac8b87d564",
              "subnet-0dd4f6e0cf9bc26e9"
            ],
            "tags": {
              "Name": "AustraliaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "AustraliaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-07e0ee860ea75eb6f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.australia-SG02-LB01",
            "aws_subnet.australia-public-subnet-2a",
            "aws_subnet.australia-public-subnet-2b",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "california_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:864899853524:loadbalancer/app/california-load-balancer/493f9319e3db3183",
            "arn_suffix": "app/california-load-balancer/493f9319e3db3183",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "california-load-balancer-132816098.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:864899853524:loadbalancer/app/california-load-balancer/493f9319e3db3183",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "california-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c28ca3a9aa14a709"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0667b2a2005562473"
              },
              {
                "subnet_id": "subnet-07d734ce40595d4ca"
              }
            ],
            "subnets": [
              "subnet-0667b2a2005562473",
              "subnet-07d734ce40595d4ca"
            ],
            "tags": {
              "Name": "CaliforniaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "CaliforniaLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-071d7efa8dce2ef00",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.california-SG02-LB01",
            "aws_subnet.california-public-subnet-1b",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hongkong_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:864899853524:loadbalancer/app/hongkong-load-balancer/f9c2832caa6afee2",
            "arn_suffix": "app/hongkong-load-balancer/f9c2832caa6afee2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hongkong-load-balancer-152441190.ap-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-east-1:864899853524:loadbalancer/app/hongkong-load-balancer/f9c2832caa6afee2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hongkong-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0acec272d8c3e7483"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07f1b86092a0aff59"
              },
              {
                "subnet_id": "subnet-091921887d612b66d"
              }
            ],
            "subnets": [
              "subnet-07f1b86092a0aff59",
              "subnet-091921887d612b66d"
            ],
            "tags": {
              "Name": "HongKongLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "HongKongLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-053d0428b4a3f2a60",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3DQVH9N71FHZ0"
          },
          "dependencies": [
            "aws_security_group.hongkong-SG02-LB01",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_subnet.hongkong-public-subnet-1b",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "london_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:864899853524:loadbalancer/app/london-load-balancer/8b81fde902012ac9",
            "arn_suffix": "app/london-load-balancer/8b81fde902012ac9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "london-load-balancer-1169626877.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:864899853524:loadbalancer/app/london-load-balancer/8b81fde902012ac9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "london-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0006edb29502e550e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-087cf6cb4d56dbf3d"
              },
              {
                "subnet_id": "subnet-09bc55cd1f3d78357"
              }
            ],
            "subnets": [
              "subnet-087cf6cb4d56dbf3d",
              "subnet-09bc55cd1f3d78357"
            ],
            "tags": {
              "Name": "LondonLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "LondonLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ffc5cd7bc165c115",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.london-SG02-LB01",
            "aws_subnet.london-public-subnet-2a",
            "aws_subnet.london-public-subnet-2b",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "newyork_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864899853524:loadbalancer/app/newyork-load-balancer/15890d6c2e5f1858",
            "arn_suffix": "app/newyork-load-balancer/15890d6c2e5f1858",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "newyork-load-balancer-543567588.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:864899853524:loadbalancer/app/newyork-load-balancer/15890d6c2e5f1858",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "newyork-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0380bba02732f29f5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00bebac2b19fd5162"
              },
              {
                "subnet_id": "subnet-0c11ff79f1e661e22"
              }
            ],
            "subnets": [
              "subnet-00bebac2b19fd5162",
              "subnet-0c11ff79f1e661e22"
            ],
            "tags": {
              "Name": "NewYorkLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "NewYorkLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-00c8befd9fc980836",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.newyork-SG02-LB01",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_subnet.newyork-public-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "saopaulo_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:864899853524:loadbalancer/app/saopaulo-load-balancer/cb2c352890d0392e",
            "arn_suffix": "app/saopaulo-load-balancer/cb2c352890d0392e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "saopaulo-load-balancer-1032221445.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:864899853524:loadbalancer/app/saopaulo-load-balancer/cb2c352890d0392e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "saopaulo-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04cdc0d8292d6d87d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d24176124fe2765"
              },
              {
                "subnet_id": "subnet-0240894c5ada09d39"
              }
            ],
            "subnets": [
              "subnet-00d24176124fe2765",
              "subnet-0240894c5ada09d39"
            ],
            "tags": {
              "Name": "SaoPauloLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "SaoPauloLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fd0255b69bcef259",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_security_group.saopaulo-SG02-LB01",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_subnet.saopaulo-public-subnet-1c",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tokyo_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:864899853524:loadbalancer/app/tokyo-load-balancer/2443699cec77c19c",
            "arn_suffix": "app/tokyo-load-balancer/2443699cec77c19c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tokyo-load-balancer-2056683890.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:864899853524:loadbalancer/app/tokyo-load-balancer/2443699cec77c19c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tokyo-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0035c06ff19973f1a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010bfff571ac7d201"
              },
              {
                "subnet_id": "subnet-0370020d103bbe044"
              }
            ],
            "subnets": [
              "subnet-010bfff571ac7d201",
              "subnet-0370020d103bbe044"
            ],
            "tags": {
              "Name": "TokyoLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoLoadBalancer",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0a0e8a6e51d409e5c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.tokyo-SG02-LB01",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_subnet.tokyo-public-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "australia-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:864899853524:listener/app/australia-load-balancer/6110116a72fe0f06/6fc7eb7ad9bcc62d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:864899853524:targetgroup/australia-target-group/0474807c0a4155d8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:864899853524:listener/app/australia-load-balancer/6110116a72fe0f06/6fc7eb7ad9bcc62d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:864899853524:loadbalancer/app/australia-load-balancer/6110116a72fe0f06",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.australia_alb",
            "aws_lb_target_group.australia_tg",
            "aws_security_group.australia-SG02-LB01",
            "aws_subnet.australia-public-subnet-2a",
            "aws_subnet.australia-public-subnet-2b",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "california-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:864899853524:listener/app/california-load-balancer/493f9319e3db3183/5b92091586cdbb06",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:864899853524:targetgroup/california-target-group/0bbbd3f4ee5fcab0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:864899853524:listener/app/california-load-balancer/493f9319e3db3183/5b92091586cdbb06",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:864899853524:loadbalancer/app/california-load-balancer/493f9319e3db3183",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.california_alb",
            "aws_lb_target_group.california_tg",
            "aws_security_group.california-SG02-LB01",
            "aws_subnet.california-public-subnet-1b",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hongkong-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:864899853524:listener/app/hongkong-load-balancer/f9c2832caa6afee2/214ad3b11101a843",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-east-1:864899853524:targetgroup/hongkong-target-group/7228c63cfc496381",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-east-1:864899853524:listener/app/hongkong-load-balancer/f9c2832caa6afee2/214ad3b11101a843",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-east-1:864899853524:loadbalancer/app/hongkong-load-balancer/f9c2832caa6afee2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hongkong_alb",
            "aws_lb_target_group.hongkong_tg",
            "aws_security_group.hongkong-SG02-LB01",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_subnet.hongkong-public-subnet-1b",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "london-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:864899853524:listener/app/london-load-balancer/8b81fde902012ac9/a93c691268b10d37",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:864899853524:targetgroup/london-target-group/081ccefe7fc96b85",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:864899853524:listener/app/london-load-balancer/8b81fde902012ac9/a93c691268b10d37",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:864899853524:loadbalancer/app/london-load-balancer/8b81fde902012ac9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.london_alb",
            "aws_lb_target_group.london_tg",
            "aws_security_group.london-SG02-LB01",
            "aws_subnet.london-public-subnet-2a",
            "aws_subnet.london-public-subnet-2b",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "newyork-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864899853524:listener/app/newyork-load-balancer/15890d6c2e5f1858/0843c03770959635",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:864899853524:targetgroup/newyork-target-group/dae741accd2b2cf3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864899853524:listener/app/newyork-load-balancer/15890d6c2e5f1858/0843c03770959635",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:864899853524:loadbalancer/app/newyork-load-balancer/15890d6c2e5f1858",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.newyork_alb",
            "aws_lb_target_group.newyork_tg",
            "aws_security_group.newyork-SG02-LB01",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_subnet.newyork-public-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "saopaulo-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:864899853524:listener/app/saopaulo-load-balancer/cb2c352890d0392e/20f23fbd4403f5c2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:864899853524:targetgroup/saopaulo-target-group/348c588fef4eb018",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:864899853524:listener/app/saopaulo-load-balancer/cb2c352890d0392e/20f23fbd4403f5c2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:864899853524:loadbalancer/app/saopaulo-load-balancer/cb2c352890d0392e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.saopaulo_alb",
            "aws_lb_target_group.saopaulo_tg",
            "aws_security_group.saopaulo-SG02-LB01",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_subnet.saopaulo-public-subnet-1c",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tokyo-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:864899853524:listener/app/tokyo-load-balancer/2443699cec77c19c/d8575edfa399da6e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:864899853524:targetgroup/tokyo-target-group/2569cab7031e7063",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:864899853524:listener/app/tokyo-load-balancer/2443699cec77c19c/d8575edfa399da6e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:864899853524:loadbalancer/app/tokyo-load-balancer/2443699cec77c19c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tokyo_alb",
            "aws_lb_target_group.tokyo_tg",
            "aws_security_group.tokyo-SG02-LB01",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_subnet.tokyo-public-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "australia_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:864899853524:targetgroup/australia-target-group/0474807c0a4155d8",
            "arn_suffix": "targetgroup/australia-target-group/0474807c0a4155d8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:864899853524:targetgroup/australia-target-group/0474807c0a4155d8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "australia-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "AustraliaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "AustraliaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07e0ee860ea75eb6f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "california_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:864899853524:targetgroup/california-target-group/0bbbd3f4ee5fcab0",
            "arn_suffix": "targetgroup/california-target-group/0bbbd3f4ee5fcab0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:864899853524:targetgroup/california-target-group/0bbbd3f4ee5fcab0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "california-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "CaliforniaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "CaliforniaTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-071d7efa8dce2ef00"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hongkong_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:864899853524:targetgroup/hongkong-target-group/7228c63cfc496381",
            "arn_suffix": "targetgroup/hongkong-target-group/7228c63cfc496381",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-east-1:864899853524:targetgroup/hongkong-target-group/7228c63cfc496381",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hongkong-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "HongKongTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "HongKongTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-053d0428b4a3f2a60"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "london_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:864899853524:targetgroup/london-target-group/081ccefe7fc96b85",
            "arn_suffix": "targetgroup/london-target-group/081ccefe7fc96b85",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:864899853524:targetgroup/london-target-group/081ccefe7fc96b85",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "london-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "LondonTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "LondonTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ffc5cd7bc165c115"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "newyork_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:864899853524:targetgroup/newyork-target-group/dae741accd2b2cf3",
            "arn_suffix": "targetgroup/newyork-target-group/dae741accd2b2cf3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:864899853524:targetgroup/newyork-target-group/dae741accd2b2cf3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "newyork-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "NewYorkTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "NewYorkTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00c8befd9fc980836"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "saopaulo_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:864899853524:targetgroup/saopaulo-target-group/348c588fef4eb018",
            "arn_suffix": "targetgroup/saopaulo-target-group/348c588fef4eb018",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:864899853524:targetgroup/saopaulo-target-group/348c588fef4eb018",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "saopaulo-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "SaoPauloTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "SaoPauloTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fd0255b69bcef259"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tokyo_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:864899853524:targetgroup/tokyo-target-group/2569cab7031e7063",
            "arn_suffix": "targetgroup/tokyo-target-group/2569cab7031e7063",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:864899853524:targetgroup/tokyo-target-group/2569cab7031e7063",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tokyo-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TokyoTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a0e8a6e51d409e5c"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tokyotesta_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:864899853524:targetgroup/tokyotesta-target-group/721cabf8b0067601",
            "arn_suffix": "targetgroup/tokyotesta-target-group/721cabf8b0067601",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:864899853524:targetgroup/tokyotesta-target-group/721cabf8b0067601",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tokyotesta-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TokyoTestTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoTestTargetGroup",
              "Owner": "MATTRESS AVENGERS",
              "Project": "Web Service",
              "Service": "Armageddon Phase 1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04ad607f3e937193f"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "australia-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077572dec82a71ffc",
            "association_id": "eipassoc-034746cd24ed5b1d6",
            "connectivity_type": "public",
            "id": "nat-066c24a71df21e6e4",
            "network_interface_id": "eni-08de733848701a66e",
            "private_ip": "172.22.1.42",
            "public_ip": "13.211.32.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e8dc7ac8b87d564",
            "tags": {
              "Name": "australia-nat"
            },
            "tags_all": {
              "Name": "australia-nat"
            }
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "california-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ee681fba05860fc",
            "association_id": "eipassoc-0d7d317412723c330",
            "connectivity_type": "public",
            "id": "nat-0c38c7f83296e8bbf",
            "network_interface_id": "eni-003c45d0c0176b603",
            "private_ip": "172.24.3.8",
            "public_ip": "54.153.119.117",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07d734ce40595d4ca",
            "tags": {
              "Name": "california-nat"
            },
            "tags_all": {
              "Name": "california-nat"
            }
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hongkong-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f7606cc118f2a36",
            "association_id": "eipassoc-01da3fa05d31f7934",
            "connectivity_type": "public",
            "id": "nat-06fc2979df4f296a2",
            "network_interface_id": "eni-064bf882620d5ffc0",
            "private_ip": "172.23.1.75",
            "public_ip": "16.163.175.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f1b86092a0aff59",
            "tags": {
              "Name": "hongkong-nat"
            },
            "tags_all": {
              "Name": "hongkong-nat"
            }
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "london-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08be61aa4b43fcf6a",
            "association_id": "eipassoc-040ab7c9bf9048349",
            "connectivity_type": "public",
            "id": "nat-02db2570d2505e647",
            "network_interface_id": "eni-04f8931b91a544071",
            "private_ip": "172.20.1.79",
            "public_ip": "18.169.249.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-087cf6cb4d56dbf3d",
            "tags": {
              "Name": "london_nat"
            },
            "tags_all": {
              "Name": "london_nat"
            }
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "newyork-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0578194fb6b2862c2",
            "association_id": "eipassoc-069c35b063b9dc807",
            "connectivity_type": "public",
            "id": "nat-0bda762156a6896f6",
            "network_interface_id": "eni-0a94f4115ea60155f",
            "private_ip": "172.19.1.152",
            "public_ip": "52.44.50.69",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c11ff79f1e661e22",
            "tags": {
              "Name": "newyork-nat"
            },
            "tags_all": {
              "Name": "newyork-nat"
            }
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "saopaulo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048abbf265caf7d83",
            "association_id": "eipassoc-077595116254d627f",
            "connectivity_type": "public",
            "id": "nat-0992e82e00b7933a8",
            "network_interface_id": "eni-022c5701d81b23601",
            "private_ip": "172.21.1.216",
            "public_ip": "54.207.215.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00d24176124fe2765",
            "tags": {
              "Name": "saopaulo-nat"
            },
            "tags_all": {
              "Name": "saopaulo-nat"
            }
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tokyo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05062e4bedc8bf507",
            "association_id": "eipassoc-08f7e698925a51fc3",
            "connectivity_type": "public",
            "id": "nat-03cd9d75219135bcc",
            "network_interface_id": "eni-0b9eb87404bf4985b",
            "private_ip": "172.18.1.109",
            "public_ip": "18.177.224.44",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0370020d103bbe044",
            "tags": {
              "Name": "tokyo-nat"
            },
            "tags_all": {
              "Name": "tokyo-nat"
            }
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tokyotest-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-021c124a59f939cba",
            "association_id": "eipassoc-0be183226540c990a",
            "connectivity_type": "public",
            "id": "nat-09a228ff7befd16d9",
            "network_interface_id": "eni-00336832427aa2d8f",
            "private_ip": "172.26.1.227",
            "public_ip": "13.231.94.251",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-088d635c2dd16e527",
            "tags": {
              "Name": "tokyotest-nat"
            },
            "tags_all": {
              "Name": "tokyotest-nat"
            }
          },
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_subnet.tokyotest-public-subnet-1a",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "newyork_vpc_to_tokyo_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.18.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05147005dca1d8ec53557707546",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05147005dca1d8ec5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0c9335396e8e102c9",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.newyork_tgw",
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_route_table.newyork-private",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "australia-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899853524:route-table/rtb-054e104b6309709aa",
            "id": "rtb-054e104b6309709aa",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-066c24a71df21e6e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "australia-private"
            },
            "tags_all": {
              "Name": "australia-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e0ee860ea75eb6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "australia-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899853524:route-table/rtb-04cd70e6da6d4f539",
            "id": "rtb-04cd70e6da6d4f539",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0686cbe9c2459dcea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "australia-public"
            },
            "tags_all": {
              "Name": "australia-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e0ee860ea75eb6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "california-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:864899853524:route-table/rtb-04482b9d09cc3bac8",
            "id": "rtb-04482b9d09cc3bac8",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c38c7f83296e8bbf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "california-private"
            },
            "tags_all": {
              "Name": "california-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-071d7efa8dce2ef00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "california-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:864899853524:route-table/rtb-0b7df605d9cd92278",
            "id": "rtb-0b7df605d9cd92278",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a743cee9eefa4c05",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "california-public"
            },
            "tags_all": {
              "Name": "california-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-071d7efa8dce2ef00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hongkong-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:864899853524:route-table/rtb-087aca007ac31049d",
            "id": "rtb-087aca007ac31049d",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06fc2979df4f296a2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hongkong-private"
            },
            "tags_all": {
              "Name": "hongkong-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-053d0428b4a3f2a60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hongkong-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:864899853524:route-table/rtb-0128da94486abc32a",
            "id": "rtb-0128da94486abc32a",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebae70028338f675",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hongkong-public"
            },
            "tags_all": {
              "Name": "hongkong-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-053d0428b4a3f2a60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "london-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:864899853524:route-table/rtb-0d36c62f72006adfa",
            "id": "rtb-0d36c62f72006adfa",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02db2570d2505e647",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "london-private"
            },
            "tags_all": {
              "Name": "london-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc5cd7bc165c115"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "london-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:864899853524:route-table/rtb-03fba934f0cb55f0e",
            "id": "rtb-03fba934f0cb55f0e",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a0e0e2b103e33bb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "london-public"
            },
            "tags_all": {
              "Name": "london-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc5cd7bc165c115"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "newyork-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864899853524:route-table/rtb-05147005dca1d8ec5",
            "id": "rtb-05147005dca1d8ec5",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bda762156a6896f6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "newyork-private"
            },
            "tags_all": {
              "Name": "newyork-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c8befd9fc980836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "newyork-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864899853524:route-table/rtb-05319e22099153055",
            "id": "rtb-05319e22099153055",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-041a1c2db6a0ad02b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "newyork-public"
            },
            "tags_all": {
              "Name": "newyork-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c8befd9fc980836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "saopaulo-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:864899853524:route-table/rtb-0dc40a6080b12bd63",
            "id": "rtb-0dc40a6080b12bd63",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0992e82e00b7933a8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "saopaulo-private"
            },
            "tags_all": {
              "Name": "saopaulo-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd0255b69bcef259"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "saopaulo-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:864899853524:route-table/rtb-058dce7c350102d62",
            "id": "rtb-058dce7c350102d62",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7e5d13327bd6e72",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "saopaulo-public"
            },
            "tags_all": {
              "Name": "saopaulo-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd0255b69bcef259"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:route-table/rtb-06bdfe0f44aacd74a",
            "id": "rtb-06bdfe0f44aacd74a",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03cd9d75219135bcc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-private"
            },
            "tags_all": {
              "Name": "tokyo-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0e8a6e51d409e5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:route-table/rtb-0be5185e2e695d6cf",
            "id": "rtb-0be5185e2e695d6cf",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0551245b36616246f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-public"
            },
            "tags_all": {
              "Name": "tokyo-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0e8a6e51d409e5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tokyo-igw",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyotest-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:route-table/rtb-073f1bd2a5e74f020",
            "id": "rtb-073f1bd2a5e74f020",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09a228ff7befd16d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyotest-private"
            },
            "tags_all": {
              "Name": "tokyotest-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ad607f3e937193f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_nat_gateway.tokyotest-nat",
            "aws_subnet.tokyotest-public-subnet-1a",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyotest-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:route-table/rtb-0102df8284f45c11a",
            "id": "rtb-0102df8284f45c11a",
            "owner_id": "864899853524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016074ce5c6ce50ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyotest-public"
            },
            "tags_all": {
              "Name": "tokyotest-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ad607f3e937193f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tokyotest-igw",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c0a5d601eedc56e",
            "route_table_id": "rtb-054e104b6309709aa",
            "subnet_id": "subnet-0d87ee6bc07d9eb38"
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_route_table.australia-private",
            "aws_subnet.australia-private-subnet-2a",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c0a5d601eedc56e",
            "route_table_id": "rtb-054e104b6309709aa",
            "subnet_id": "subnet-0d87ee6bc07d9eb38"
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_route_table.australia-private",
            "aws_subnet.australia-private-subnet-2a",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eb51354bc7c44ad",
            "route_table_id": "rtb-04cd70e6da6d4f539",
            "subnet_id": "subnet-03e8dc7ac8b87d564"
          },
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_route_table.australia-public",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9bafea53c87f4b1",
            "route_table_id": "rtb-04cd70e6da6d4f539",
            "subnet_id": "subnet-0dd4f6e0cf9bc26e9"
          },
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_route_table.australia-public",
            "aws_subnet.australia-public-subnet-2b",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053d5ad7b66b06d66",
            "route_table_id": "rtb-04482b9d09cc3bac8",
            "subnet_id": "subnet-0d48ef4d3ddeb1935"
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_route_table.california-private",
            "aws_subnet.california-private-subnet-1b",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b65b869186b30874",
            "route_table_id": "rtb-04482b9d09cc3bac8",
            "subnet_id": "subnet-08f6478c605454e10"
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_route_table.california-private",
            "aws_subnet.california-private-subnet-1c",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041e91590a083b5e7",
            "route_table_id": "rtb-0b7df605d9cd92278",
            "subnet_id": "subnet-0667b2a2005562473"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table.california-public",
            "aws_subnet.california-public-subnet-1b",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a64c1037ddff9d9c",
            "route_table_id": "rtb-0b7df605d9cd92278",
            "subnet_id": "subnet-07d734ce40595d4ca"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table.california-public",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hong-kong-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a16406071ac4558f",
            "route_table_id": "rtb-0128da94486abc32a",
            "subnet_id": "subnet-091921887d612b66d"
          },
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_route_table.hongkong-public",
            "aws_subnet.hongkong-public-subnet-1b",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9fc6e30a8d12e01",
            "route_table_id": "rtb-087aca007ac31049d",
            "subnet_id": "subnet-0cd99dd5cab0c0ccc"
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_route_table.hongkong-private",
            "aws_subnet.hongkong-private-subnet-1a",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4437b07b3766cc1",
            "route_table_id": "rtb-087aca007ac31049d",
            "subnet_id": "subnet-081620e90a9e365dc"
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_route_table.hongkong-private",
            "aws_subnet.hongkong-private-subnet-1b",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d5e4c96caa52160",
            "route_table_id": "rtb-0128da94486abc32a",
            "subnet_id": "subnet-07f1b86092a0aff59"
          },
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_route_table.hongkong-public",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ad5bc5e63ed2cd7",
            "route_table_id": "rtb-0d36c62f72006adfa",
            "subnet_id": "subnet-048768ba82e163285"
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_route_table.london-private",
            "aws_subnet.london-private-subnet-2a",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d57bc93e389fdbf",
            "route_table_id": "rtb-0d36c62f72006adfa",
            "subnet_id": "subnet-007a96fbf5c8a1439"
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_route_table.london-private",
            "aws_subnet.london-private-subnet-2b",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03740a11774acf5ac",
            "route_table_id": "rtb-03fba934f0cb55f0e",
            "subnet_id": "subnet-087cf6cb4d56dbf3d"
          },
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_route_table.london-public",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b13e57f4d09b99e0",
            "route_table_id": "rtb-03fba934f0cb55f0e",
            "subnet_id": "subnet-09bc55cd1f3d78357"
          },
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_route_table.london-public",
            "aws_subnet.london-public-subnet-2b",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c5fb05859c6c2ec",
            "route_table_id": "rtb-05147005dca1d8ec5",
            "subnet_id": "subnet-0074a92e52b6871ca"
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_route_table.newyork-private",
            "aws_subnet.newyork-private-subnet-1a",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0992d7fae083542f3",
            "route_table_id": "rtb-05147005dca1d8ec5",
            "subnet_id": "subnet-0d700a10e7cc4f3a0"
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_route_table.newyork-private",
            "aws_subnet.newyork-private-subnet-1b",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd459de6d439a9c5",
            "route_table_id": "rtb-05319e22099153055",
            "subnet_id": "subnet-0c11ff79f1e661e22"
          },
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_route_table.newyork-public",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066f56024ada6564f",
            "route_table_id": "rtb-05319e22099153055",
            "subnet_id": "subnet-00bebac2b19fd5162"
          },
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_route_table.newyork-public",
            "aws_subnet.newyork-public-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sao-paulo-public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbad6bffca8ac597",
            "route_table_id": "rtb-058dce7c350102d62",
            "subnet_id": "subnet-0240894c5ada09d39"
          },
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_route_table.saopaulo-public",
            "aws_subnet.saopaulo-public-subnet-1c",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa5ab2ae1b6511aa",
            "route_table_id": "rtb-0dc40a6080b12bd63",
            "subnet_id": "subnet-0e307533f7f386b72"
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_route_table.saopaulo-private",
            "aws_subnet.saopaulo-private-subnet-1a",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f424493143834da",
            "route_table_id": "rtb-0dc40a6080b12bd63",
            "subnet_id": "subnet-04fb58ffa3fa72985"
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_route_table.saopaulo-private",
            "aws_subnet.saopaulo-private-subnet-1c",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a78e3e91024a119",
            "route_table_id": "rtb-058dce7c350102d62",
            "subnet_id": "subnet-00d24176124fe2765"
          },
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_route_table.saopaulo-public",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5718b563407de2a",
            "route_table_id": "rtb-06bdfe0f44aacd74a",
            "subnet_id": "subnet-046350926b1c5c8dd"
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table.tokyo-private",
            "aws_subnet.tokyo-private-subnet-1a",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-private-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a907e4981921b1b",
            "route_table_id": "rtb-06bdfe0f44aacd74a",
            "subnet_id": "subnet-05a6280a7f6d74313"
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table.tokyo-private",
            "aws_subnet.tokyo-private-subnet-1d",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c47b3f58b57a41a0",
            "route_table_id": "rtb-0be5185e2e695d6cf",
            "subnet_id": "subnet-0370020d103bbe044"
          },
          "dependencies": [
            "aws_internet_gateway.tokyo-igw",
            "aws_route_table.tokyo-public",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-public-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1b077c1b4174313",
            "route_table_id": "rtb-0be5185e2e695d6cf",
            "subnet_id": "subnet-010bfff571ac7d201"
          },
          "dependencies": [
            "aws_internet_gateway.tokyo-igw",
            "aws_route_table.tokyo-public",
            "aws_subnet.tokyo-public-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyotest-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ec72a66e19ffacd",
            "route_table_id": "rtb-073f1bd2a5e74f020",
            "subnet_id": "subnet-0a14a3897c07a5b63"
          },
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_nat_gateway.tokyotest-nat",
            "aws_route_table.tokyotest-private",
            "aws_subnet.tokyotest-private-subnet-1a",
            "aws_subnet.tokyotest-public-subnet-1a",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyotest-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff78da834aaf1069",
            "route_table_id": "rtb-0102df8284f45c11a",
            "subnet_id": "subnet-088d635c2dd16e527"
          },
          "dependencies": [
            "aws_internet_gateway.tokyotest-igw",
            "aws_route_table.tokyotest-public",
            "aws_subnet.tokyotest-public-subnet-1a",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "australia-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899853524:security-group/sg-0376f3229f27c3b68",
            "description": "australia-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0376f3229f27c3b68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "australia-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "australia-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "australia-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e0ee860ea75eb6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.australia-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "australia-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899853524:security-group/sg-0a790ba03262f4611",
            "description": "australia-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a790ba03262f4611",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "australia-SG02-LB01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "australia-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "australia-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e0ee860ea75eb6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "california-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:864899853524:security-group/sg-0ddb72c574ebe3ebb",
            "description": "california-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddb72c574ebe3ebb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "california-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "california-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "california-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-071d7efa8dce2ef00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.california-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "california-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:864899853524:security-group/sg-0c28ca3a9aa14a709",
            "description": "california-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c28ca3a9aa14a709",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "california-SG02-LB01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "california-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "california-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-071d7efa8dce2ef00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hongkong-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:864899853524:security-group/sg-061006c5b937640f6",
            "description": "hongkong-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061006c5b937640f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hongkong-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hongkong-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "hongkong-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-053d0428b4a3f2a60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hongkong-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:864899853524:security-group/sg-0acec272d8c3e7483",
            "description": "hongkong-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acec272d8c3e7483",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hongkong-SG02-LB01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hongkong-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "hongkong-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-053d0428b4a3f2a60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "london-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:864899853524:security-group/sg-0e9aef382eaa7b0e6",
            "description": "london-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9aef382eaa7b0e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "london-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "london-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "london-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc5cd7bc165c115"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.london-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "london-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:864899853524:security-group/sg-0006edb29502e550e",
            "description": "london-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0006edb29502e550e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "london-SG02-LB01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "london-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "london-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffc5cd7bc165c115"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "newyork-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864899853524:security-group/sg-0c176f18ff2bb3d9e",
            "description": "newyork-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c176f18ff2bb3d9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "newyork-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "newyork-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "newyork-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c8befd9fc980836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "newyork-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864899853524:security-group/sg-0380bba02732f29f5",
            "description": "newyork-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0380bba02732f29f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "newyork-SG02-LB01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "newyork-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "newyork-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c8befd9fc980836"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "saopaulo-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:864899853524:security-group/sg-012ee8313388dbbdf",
            "description": "saopaulo-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012ee8313388dbbdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "saopaulo-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-paulo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "sao-paulo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd0255b69bcef259"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "saopaulo-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:864899853524:security-group/sg-04cdc0d8292d6d87d",
            "description": "saopaulo-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cdc0d8292d6d87d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "saopaulo-SG02-LB01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sao-paulo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "sao-paulo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd0255b69bcef259"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:security-group/sg-0b1141c9a839f8ba8",
            "description": "tokyo-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1141c9a839f8ba8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyo-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0e8a6e51d409e5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:security-group/sg-0035c06ff19973f1a",
            "description": "tokyo-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0035c06ff19973f1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-SG02-LB01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyo-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0e8a6e51d409e5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyotest-SG01-ASG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:security-group/sg-06d2c0e36a8108db9",
            "description": "tokyo-test-SG01-ASG01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d2c0e36a8108db9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-test-SG01-ASG01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyotest-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyotest-SG01-ASG01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ad607f3e937193f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyotest-SG02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:security-group/sg-01c33ac58b9bcd566",
            "description": "tokyo-test-SG02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c33ac58b9bcd566",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-test-SG02-LB01",
            "name_prefix": "",
            "owner_id": "864899853524",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyotest-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "tokyotest-SG02-LB01",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ad607f3e937193f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-private-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899853524:subnet/subnet-0d87ee6bc07d9eb38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.22.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d87ee6bc07d9eb38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-07e0ee860ea75eb6f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-private-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899853524:subnet/subnet-0609474e28f86a5e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.22.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0609474e28f86a5e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-07e0ee860ea75eb6f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-public-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899853524:subnet/subnet-03e8dc7ac8b87d564",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.22.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e8dc7ac8b87d564",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-07e0ee860ea75eb6f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-public-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899853524:subnet/subnet-0dd4f6e0cf9bc26e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.22.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd4f6e0cf9bc26e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-07e0ee860ea75eb6f"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:864899853524:subnet/subnet-0d48ef4d3ddeb1935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.24.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d48ef4d3ddeb1935",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-071d7efa8dce2ef00"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:864899853524:subnet/subnet-08f6478c605454e10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.24.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f6478c605454e10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-071d7efa8dce2ef00"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:864899853524:subnet/subnet-0667b2a2005562473",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.24.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0667b2a2005562473",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-071d7efa8dce2ef00"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:864899853524:subnet/subnet-07d734ce40595d4ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.24.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d734ce40595d4ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-071d7efa8dce2ef00"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:864899853524:subnet/subnet-0cd99dd5cab0c0ccc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "172.23.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd99dd5cab0c0ccc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-053d0428b4a3f2a60"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:864899853524:subnet/subnet-081620e90a9e365dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "172.23.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081620e90a9e365dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-053d0428b4a3f2a60"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:864899853524:subnet/subnet-07f1b86092a0aff59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "172.23.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f1b86092a0aff59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-053d0428b4a3f2a60"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:864899853524:subnet/subnet-091921887d612b66d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "172.23.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091921887d612b66d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-053d0428b4a3f2a60"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-private-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:864899853524:subnet/subnet-048768ba82e163285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048768ba82e163285",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ffc5cd7bc165c115"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-private-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:864899853524:subnet/subnet-007a96fbf5c8a1439",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007a96fbf5c8a1439",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ffc5cd7bc165c115"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-public-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:864899853524:subnet/subnet-087cf6cb4d56dbf3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087cf6cb4d56dbf3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ffc5cd7bc165c115"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-public-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:864899853524:subnet/subnet-09bc55cd1f3d78357",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bc55cd1f3d78357",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ffc5cd7bc165c115"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864899853524:subnet/subnet-0074a92e52b6871ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.19.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0074a92e52b6871ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-00c8befd9fc980836"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864899853524:subnet/subnet-0d700a10e7cc4f3a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.19.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d700a10e7cc4f3a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-00c8befd9fc980836"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864899853524:subnet/subnet-0c11ff79f1e661e22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.19.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c11ff79f1e661e22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-00c8befd9fc980836"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864899853524:subnet/subnet-00bebac2b19fd5162",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.19.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bebac2b19fd5162",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-00c8befd9fc980836"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:864899853524:subnet/subnet-0e307533f7f386b72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.21.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e307533f7f386b72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fd0255b69bcef259"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:864899853524:subnet/subnet-04fb58ffa3fa72985",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "172.21.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fb58ffa3fa72985",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fd0255b69bcef259"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:864899853524:subnet/subnet-00d24176124fe2765",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.21.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d24176124fe2765",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fd0255b69bcef259"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:864899853524:subnet/subnet-0240894c5ada09d39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "172.21.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0240894c5ada09d39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0fd0255b69bcef259"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:subnet/subnet-046350926b1c5c8dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.18.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046350926b1c5c8dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0a0e8a6e51d409e5c"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-private-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:subnet/subnet-05a6280a7f6d74313",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.18.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a6280a7f6d74313",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0a0e8a6e51d409e5c"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:subnet/subnet-0370020d103bbe044",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.18.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0370020d103bbe044",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0a0e8a6e51d409e5c"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-public-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:subnet/subnet-010bfff571ac7d201",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.18.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010bfff571ac7d201",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0a0e8a6e51d409e5c"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyotest-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:subnet/subnet-0a14a3897c07a5b63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.26.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a14a3897c07a5b63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-04ad607f3e937193f"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyotest-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:subnet/subnet-088d635c2dd16e527",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.26.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088d635c2dd16e527",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864899853524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-04ad607f3e937193f"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "australia-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:864899853524:vpc/vpc-07e0ee860ea75eb6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.22.0.0/16",
            "default_network_acl_id": "acl-05d0ac9ba95343d7c",
            "default_route_table_id": "rtb-0002153ae0371f35b",
            "default_security_group_id": "sg-0afe95e468be24a31",
            "dhcp_options_id": "dopt-018398db5d28dba22",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e0ee860ea75eb6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0002153ae0371f35b",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-Australia-vpc"
            },
            "tags_all": {
              "Name": "PROD-Australia-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "california-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:864899853524:vpc/vpc-071d7efa8dce2ef00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.24.0.0/16",
            "default_network_acl_id": "acl-0641a02dc6eb1313a",
            "default_route_table_id": "rtb-03456dd333a85effb",
            "default_security_group_id": "sg-0f7254e3b1ce8d7e0",
            "dhcp_options_id": "dopt-0a2e45816dd63eac6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071d7efa8dce2ef00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03456dd333a85effb",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-Califonia-vpc"
            },
            "tags_all": {
              "Name": "PROD-Califonia-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hongkong-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:864899853524:vpc/vpc-053d0428b4a3f2a60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.23.0.0/16",
            "default_network_acl_id": "acl-0cb5305a1001dcfb7",
            "default_route_table_id": "rtb-08e4a10b9a3899042",
            "default_security_group_id": "sg-0dc40f9893c36e18b",
            "dhcp_options_id": "dopt-0ba62bb1c53ce7911",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053d0428b4a3f2a60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e4a10b9a3899042",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-Hongkong-vpc"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "london-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:864899853524:vpc/vpc-0ffc5cd7bc165c115",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0c5de1343295d68ad",
            "default_route_table_id": "rtb-06efe7b781a289ae8",
            "default_security_group_id": "sg-0914703db8123fbdf",
            "dhcp_options_id": "dopt-048bf6d21ac508521",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ffc5cd7bc165c115",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06efe7b781a289ae8",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-London-vpc"
            },
            "tags_all": {
              "Name": "PROD-London-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "newyork-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:864899853524:vpc/vpc-00c8befd9fc980836",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.19.0.0/16",
            "default_network_acl_id": "acl-014e4a0a2ea8f5a85",
            "default_route_table_id": "rtb-05bcf986d7d2a504f",
            "default_security_group_id": "sg-09ea982ba30860bf5",
            "dhcp_options_id": "dopt-0643245735fbd8a9d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c8befd9fc980836",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05bcf986d7d2a504f",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-New York-vpc"
            },
            "tags_all": {
              "Name": "PROD-New York-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "saopaulo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:864899853524:vpc/vpc-0fd0255b69bcef259",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-03318ae856fc382a1",
            "default_route_table_id": "rtb-08afaa4406a88b2a7",
            "default_security_group_id": "sg-0deb9f99c822b263c",
            "dhcp_options_id": "dopt-05d822e4919ac5088",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd0255b69bcef259",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08afaa4406a88b2a7",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-Saup-Paulo-vpc"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:vpc/vpc-0a0e8a6e51d409e5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-0fd6d4e1863d30188",
            "default_route_table_id": "rtb-0362cf84a2f6ab7af",
            "default_security_group_id": "sg-055053fe01adacfa9",
            "dhcp_options_id": "dopt-0d340186724187dcb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0e8a6e51d409e5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0362cf84a2f6ab7af",
            "owner_id": "864899853524",
            "tags": {
              "Name": "PROD-Tokyo-vpc"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyotest-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:864899853524:vpc/vpc-04ad607f3e937193f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.26.0.0/16",
            "default_network_acl_id": "acl-01ffd6ae2b5c9a023",
            "default_route_table_id": "rtb-04692ca3e57311912",
            "default_security_group_id": "sg-05ab55c7d9dbf3648",
            "dhcp_options_id": "dopt-0d340186724187dcb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ad607f3e937193f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04692ca3e57311912",
            "owner_id": "864899853524",
            "tags": {
              "Name": "TEST-Tokyo-vpc"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-vpc"
            }
          }
        }
      ]
    }
  ]
}